# Proyecto1-Paralela

./: .gitignore  CMakeLists.txt  Circle.cpp  Constants.cpp  README.md  main.cpp  main_par.cpp
